--- a/frontend/buildspec.yml
+++ b/frontend/buildspec.yml
@@ -36,6 +36,7 @@ phases:
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       # Writing File Artifact
       - echo Writing image definitions file...
+      - mkdir build/
       - printf '{"Version":"1.0","ImageURI":"%s"}' "${ECR_REPOSITORY_URI}:${IMAGE_TAG}" > build/imageDetail.json
       - ls -al build/
       - cat build/imageDetail.json
