--- a/frontend/buildspec.yml
+++ b/frontend/buildspec.yml
@@ -39,4 +39,5 @@ phases:
       - printf '[{"name":"frontend","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - ls -al
 artifacts:
-    files: imagedefinitions.json
+  files:
+    - imagedefinitions.json
