--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -3,29 +3,45 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      # Login to Amazon ECR
-      - aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${AWS_ACCOUNT_NUMBER}.dkr.ecr.${AWS_REGION}.amazonaws.com
-      # Set the image tag using CodeBuild source version
-      - IMAGE_TAG=${CODEBUILD_RESOLVED_SOURCE_VERSION}
-      # Set the full URI for the Docker image
-      - IMAGE_URI=${AWS_ACCOUNT_NUMBER}.dkr.ecr.${AWS_REGION}.amazonaws.com/${CI_PROJECT_BE_NAME}:${IMAGE_TAG}
-  
+      - export AWS_REGION=ap-northeast-1
+      - export TASK_NAME_BE=fcjresbar-task-be
+      - echo "export AWS_REGION=${AWS_REGION}" | tee -a ~/.bash_profile
+      - aws configure set default.region ${AWS_REGION}
+      # Get AWS_ACCOUNT_ID
+      - export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
+      - echo "export AWS_ACCOUNT_ID=${AWS_ACCOUNT_ID}" | tee -a ~/.bash_profile
+      # Get REPOSITORY_URI
+      - export IMAGE_REPO_NAME=fcj-lmduc5-backend
+      - export REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$IMAGE_REPO_NAME
+      # Login ECR
+      - aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+      - echo "Login Successful"
+      - export COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - export IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
       # Navigate to backend directory and build Docker image
       - cd backend
-      - docker build -f Dockerfile -t ${IMAGE_URI} .
+      - docker build -f Dockerfile.prod -t $REPOSITORY_URI:latest .
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
       
   post_build:
     commands:
+      - echo Build completed on `date`
+      - echo Pushing the Docker images...
       # Push the Docker image to ECR
-      - docker push ${IMAGE_URI}
+      - docker push $REPOSITORY_URI:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      # Writing File Artifact
+      - echo Writing image definitions file...
+      - printf '[{"name":"frontend","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
+      - cat imageDetail.json
       
       # Get the current task definition from ECS
       - TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition ${TASK_NAME_BE} --region ${AWS_REGION})
       
       # Create new task definition with updated image
-      - NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "${IMAGE_URI}" '.taskDefinition | .containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities) | del(.registeredAt) | del(.registeredBy)')
+      - NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "$REPOSITORY_URI:$IMAGE_TAG" '.taskDefinition | .containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities) | del(.registeredAt) | del(.registeredBy)')
       - NEW_REVISION=$(aws ecs register-task-definition --region ${AWS_REGION} --cli-input-json "$NEW_TASK_DEFINITION")
       
       # Extract required information for AppSpec
@@ -35,23 +51,17 @@ phases:
       
       # Create AppSpec content for CodeDeploy Blue/Green deployment
       - |
-        APP_SPEC=$(jq -n --arg taskDef "$AWS_TASK_DEFINITION_ARN" --arg containerName "$CONTAINER_NAME" --argjson containerPort "$CONTAINER_PORT" '{
-          version: "0.0",
-          Resources: [
-            {
-              TargetService: {
-                Type: "AWS::ECS::Service",
-                Properties: {
-                  TaskDefinition: $taskDef,
-                  LoadBalancerInfo: {
-                    ContainerName: $containerName,
-                    ContainerPort: $containerPort
-                  }
-                }
-              }
-            }
-          ]
-        }')
+        cat <<EOF > appspec.yml
+        version: "0.0"
+        Resources:
+          - TargetService:
+              Type: "AWS::ECS::Service"
+              Properties:
+                TaskDefinition: "$AWS_TASK_DEFINITION_ARN"
+                LoadBalancerInfo:
+                  ContainerName: "$CONTAINER_NAME"
+                  ContainerPort: $CONTAINER_PORT
+        EOF
       
       # Create deployment revision with AppSpec content
       - |
