--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -22,7 +22,7 @@ phases:
     commands:
       # Navigate to backend directory and build Docker image
       - cd backend
-      - docker build -f Dockerfile.prod -t $REPOSITORY_URI:latest .
+      - docker build -f Dockerfile -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
       
   post_build:
