update buildspec.yml 2

--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -5,6 +5,7 @@ phases:
     commands:
       - export AWS_REGION=ap-northeast-1
       - export AWS_APPLICATION_NAME=AppECS-FCJ-Lab-cluster-backend
+      - export AWS_DEPLOYMENT_GROUP_NAME=DgpECS-FCJ-Lab-cluster-backend
       - export TASK_NAME_BE=fcjresbar-task-be
       - echo "export AWS_REGION=${AWS_REGION}" | tee -a ~/.bash_profile
       - aws configure set default.region ${AWS_REGION}
