--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -52,21 +52,22 @@ phases:
       - CONTAINER_PORT=$(echo $TASK_DEFINITION | jq -r '.taskDefinition.containerDefinitions[0].portMappings[0].containerPort')
       
       # Create AppSpec content for CodeDeploy Blue/Green deployment
-      - |
-        APP_SPEC=$(cat <<EOF
-        version: "0.0"
-        Resources:
-          - TargetService:
-              Type: "AWS::ECS::Service"
-              Properties:
-                TaskDefinition: "$AWS_TASK_DEFINITION_ARN"
-                LoadBalancerInfo:
-                  ContainerName: "$CONTAINER_NAME"
-                  ContainerPort: $CONTAINER_PORT
-        EOF
-        )
-      - echo $APP_SPEC
+      # - |
+      #   APP_SPEC=$(cat <<EOF
+      #   version: "0.0"
+      #   Resources:
+      #     - TargetService:
+      #         Type: "AWS::ECS::Service"
+      #         Properties:
+      #           TaskDefinition: "$AWS_TASK_DEFINITION_ARN"
+      #           LoadBalancerInfo:
+      #             ContainerName: "$CONTAINER_NAME"
+      #             ContainerPort: $CONTAINER_PORT
+      #   EOF
+      #   )
+      # - echo $APP_SPEC
       # Create deployment revision with AppSpec content
+        # - |
         # REVISION=$(jq -n --arg appSpec "$APP_SPEC" '{
         #   revisionType: "AppSpecContent",
         #   appSpecContent: {
@@ -77,8 +78,16 @@ phases:
         REVISION=$(cat <<EOF
         revisionType: AppSpecContent
         appSpecContent:
-          content: |
-            $APP_SPEC
+          content:
+            version: "0.0"
+            Resources:
+              - TargetService:
+                  Type: "AWS::ECS::Service"
+                  Properties:
+                    TaskDefinition: "$AWS_TASK_DEFINITION_ARN"
+                    LoadBalancerInfo:
+                      ContainerName: "$CONTAINER_NAME"
+                      ContainerPort: $CONTAINER_PORT
         EOF
         )
 
