--- a/backend/buildspec.yml
+++ b/backend/buildspec.yml
@@ -66,23 +66,14 @@ phases:
         EOF
         )
       - echo $APP_SPEC 
-      # Create deployment revision with AppSpec content
-        # REVISION=$(jq -n --arg appSpec "$APP_SPEC" '{
-        #   revisionType: "AppSpecContent",
-        #   appSpecContent: {
-        #     content: $appSpec
-        #   }
-        # }')
+        #Create deployment revision with AppSpec content
       - |
-        REVISION=$(cat <<EOF
-        {
-          "revisionType": "AppSpecContent",
-          "appSpecContent": {
-            "content": "$(APP_SPEC)"
-          }
-        }
-        EOF
-        )
+          REVISION=$(jq -n --arg appSpec "$APP_SPEC" '{
+            revisionType: "AppSpecContent",
+            appSpecContent: {
+              content: $appSpec
+            }
+          }')
 
       # Create new deployment in CodeDeploy-1
       - aws deploy create-deployment --region ${AWS_REGION} --application-name ${AWS_APPLICATION_NAME} --deployment-group-name ${AWS_DEPLOYMENT_GROUP_NAME} --revision "$REVISION"
