--- a/backend/buildspec-1.yml
+++ b/backend/buildspec-1.yml
@@ -36,7 +36,7 @@ phases:
       - echo Writing image definitions file...
       - printf '{"ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
       - cat imageDetail.json
-      # Get the current task definition from ECS
+      # Get the current task definition from ECSS
       - TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition ${TASK_NAME_BE} --region ${AWS_REGION})
 
       # Create new task definition with updated image using json
