--- a/backend/buildspec-1.yml
+++ b/backend/buildspec-1.yml
@@ -37,7 +37,7 @@ phases:
       - printf '{"ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
       - cat imageDetail.json
       # Get the current task definition from ECSS
-      - TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition ${TASK_NAME_BE} --region ${AWS_REGION})
+      # - TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition ${TASK_NAME_BE} --region ${AWS_REGION})
 
       # Create new task definition with updated image using json
       # - NEW_TASK_DEFINITION=$(echo $TASK_DEFINITION | jq --arg IMAGE "$REPOSITORY_URI:$IMAGE_TAG" '.taskDefinition | .containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn) | del(.revision) | del(.status) | del(.requiresAttributes) | del(.compatibilities) | del(.registeredAt) | del(.registeredBy)')
@@ -55,5 +55,5 @@ phases:
 artifacts:
   files:
     - imageDetail.json
-    # - appspec.yaml
+    - appspec.yaml
   base-directory: backend
