--- a/backend/appspec.yaml
+++ b/backend/appspec.yaml
@@ -5,7 +5,7 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: <TASK_DEFINITION>
+        TaskDefinition: arn:aws:ecs:ap-northeast-1:187091248012:task-definition/fcjresbar-task-be:76
         LoadBalancerInfo: 
           ContainerName: "backend"
-          ContainerPort: 80
+          ContainerPort: 5000
