--- a/backend/appspec.yaml
+++ b/backend/appspec.yaml
@@ -5,7 +5,7 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: arn:aws:ecs:ap-northeast-1:187091248012:task-definition/fcjresbar-task-be:76
+        TaskDefinition: {{TASK_DEFINITION}}
         LoadBalancerInfo: 
           ContainerName: "backend"
           ContainerPort: 5000
